--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -85,6 +85,7 @@
 .date {
   position: absolute;
   top: 50px;
+  z-index: 2;
 }
 
 .options {
@@ -94,6 +95,7 @@
   color: gray;
   border-radius: 5px;
   box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
+  z-index: 2;
 }
 
 .optionItem {
